[gd_scene load_steps=62 format=2]

[ext_resource path="res://Scenes/FPS.gd" type="Script" id=1]
[ext_resource path="res://Scripts/GameCamera.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Levels/Level_8/Lamp.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Countdown.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Levels/Level_8/Level_Logic.gd" type="Script" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]
[ext_resource path="res://Images/floor.png" type="Texture" id=7]
[ext_resource path="res://Images/Level_8/image-2.png" type="Texture" id=8]
[ext_resource path="res://Images/Level_8/SAAM-1979.136.153_1.jpg" type="Texture" id=9]
[ext_resource path="res://Images/Level_8/coffee.png" type="Texture" id=10]
[ext_resource path="res://Images/Level_8/5011583172461.jpg" type="Texture" id=11]
[ext_resource path="res://Images/Level_8/onion.png" type="Texture" id=12]
[ext_resource path="res://Images/Level_8/Kartoffel.png" type="Texture" id=13]
[ext_resource path="res://Images/Level_8/lamp.png" type="Texture" id=14]
[ext_resource path="res://Images/Level_8/lamp_light.png" type="Texture" id=15]
[ext_resource path="res://Images/Level_8/of.png" type="Texture" id=16]
[ext_resource path="res://Images/Level_8/switchbase.png" type="Texture" id=17]
[ext_resource path="res://Images/Level_8/on.png" type="Texture" id=18]
[ext_resource path="res://Retrophile Regular.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Scenes/Menues/Pause_Menu/Pause_Menu.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/TransitionMask.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Weapons/ProjectileWeapons/Pistol/Pistol_Dummy.tscn" type="PackedScene" id=22]
[ext_resource path="res://Images/Level_8/spritesheet_smoke_whisp.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 19 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.62963, 1 )
colors = PoolColorArray( 0.578613, 0.914021, 0.9375, 0.184314, 0.296875, 0.884644, 1, 1, 0.86589, 0.921875, 0.205261, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.190909 ), 0.0, 0.0, 0, 0, Vector2( 0.0540541, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.708108, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -8.4091, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 60, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 100.0
angular_velocity = 576.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 20.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 180, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 360, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 540, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 720, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 900, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1080, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1260, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1440, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1620, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1800, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1980, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 2160, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 2340, 0, 180, 600 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 0, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 180, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 360, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 540, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 720, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 900, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1080, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1260, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1440, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1620, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1800, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 1980, 600, 180, 600 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 2160, 600, 180, 600 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=36]
radius = 71.1961

[sub_resource type="PhysicsMaterial" id=37]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 150.344, 81.4837 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="Players" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player_Stats" type="Node" parent="CanvasLayer"]

[node name="Pause_Menu" parent="CanvasLayer" instance=ExtResource( 20 )]
visible = false

[node name="TransitionMask" parent="CanvasLayer" instance=ExtResource( 21 )]
visible = false

[node name="Countdown" type="Label" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.73
margin_top = -59.8565
margin_right = 36.73
margin_bottom = 90.1435
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
last_string = "GO!!"

[node name="FPS" type="Label" parent="CanvasLayer"]
margin_right = 48.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "test"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawns" type="Node2D" parent="."]

[node name="Player_Spawn_1" type="Node2D" parent="Spawns"]
position = Vector2( 2280.04, 430.606 )

[node name="Player_Spawn_2" type="Node2D" parent="Spawns"]
position = Vector2( -1568.88, -1323.62 )

[node name="Player_Spawn_3" type="Node2D" parent="Spawns"]
position = Vector2( -871.283, 379.801 )

[node name="Player_Spawn_4" type="Node2D" parent="Spawns"]
position = Vector2( 1663.45, -1548.69 )

[node name="Weapons" type="Node2D" parent="."]

[node name="Pistol_Dummy" parent="Weapons" instance=ExtResource( 22 )]
position = Vector2( 2157.38, -1419.9 )

[node name="Pistol_Dummy2" parent="Weapons" instance=ExtResource( 22 )]
position = Vector2( 2101.98, 480.879 )

[node name="Pistol_Dummy4" parent="Weapons" instance=ExtResource( 22 )]
position = Vector2( -1275.32, 47.2268 )

[node name="Pistol_Dummy5" parent="Weapons" instance=ExtResource( 22 )]
position = Vector2( -1423.87, -1284.83 )

[node name="Background" type="Node2D" parent="."]
show_behind_parent = true
scale = Vector2( 1.2, 1.2 )
z_index = -1000
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Wallpaper" type="Node2D" parent="Background"]

[node name="5011583172463" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -1791.67, 125 )
texture = ExtResource( 11 )

[node name="5011583172461" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -1791.67, -750 )
texture = ExtResource( 11 )

[node name="5011583172462" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -1772.68, -1625 )
texture = ExtResource( 11 )

[node name="5011583172464" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -1770.46, 125 )
texture = ExtResource( 11 )

[node name="5011583172465" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -1770.46, -750 )
texture = ExtResource( 11 )

[node name="5011583172466" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -884.221, -1622.64 )
texture = ExtResource( 11 )

[node name="5011583172467" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -884.221, 127.357 )
texture = ExtResource( 11 )

[node name="5011583172468" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( -884.221, -747.643 )
texture = ExtResource( 11 )

[node name="5011583172469" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 9.25964, -1627.93 )
texture = ExtResource( 11 )

[node name="5011583172470" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 9.25964, 127.357 )
texture = ExtResource( 11 )

[node name="5011583172471" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 9.25964, -747.643 )
texture = ExtResource( 11 )

[node name="5011583172472" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 906.915, -1623.89 )
texture = ExtResource( 11 )

[node name="5011583172473" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 906.915, 126.113 )
texture = ExtResource( 11 )

[node name="5011583172474" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 906.915, -748.888 )
texture = ExtResource( 11 )

[node name="5011583172475" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 1802.58, -1604.74 )
texture = ExtResource( 11 )

[node name="5011583172476" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 1802.58, 142.612 )
texture = ExtResource( 11 )

[node name="5011583172477" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 1802.58, -732.388 )
texture = ExtResource( 11 )

[node name="5011583172478" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 2689.78, -1612.68 )
texture = ExtResource( 11 )

[node name="5011583172479" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 2698.13, 147.612 )
texture = ExtResource( 11 )

[node name="5011583172481" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 2696.46, 1028.98 )
texture = ExtResource( 11 )

[node name="5011583172482" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 1803.29, 1037.52 )
texture = ExtResource( 11 )

[node name="5011583172483" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 1806.13, 1786.65 )
texture = ExtResource( 11 )

[node name="5011583172484" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 2705.97, 1773.23 )
texture = ExtResource( 11 )

[node name="5011583172480" type="Sprite" parent="Background/Wallpaper"]
position = Vector2( 2696.46, -729.055 )
texture = ExtResource( 11 )

[node name="Spikes" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 6.3, 6.3 )
limit_left = -2665
limit_top = -2000
limit_right = 10000
limit_bottom = 1800
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true
script = ExtResource( 2 )
max_zoom = 6.3

[node name="Particles" type="Node2D" parent="."]
position = Vector2( 2163.1, 171.134 )
scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="Particles"]
position = Vector2( -1393.98, 295.262 )
z_index = -1
z_as_relative = false
amount = 20
lifetime = 0.4
process_material = SubResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Particles"]
position = Vector2( -1438.49, -369.67 )
scale = Vector2( 1, 2 )
frames = SubResource( 35 )
frame = 21
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Particles"]
position = Vector2( -1401.4, -364.466 )
scale = Vector2( 1, 2 )
frames = SubResource( 35 )
frame = 14
speed_scale = 1.5
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Particles"]
position = Vector2( -1348.49, -364.466 )
scale = Vector2( 1, 2 )
frames = SubResource( 35 )
speed_scale = 1.7
playing = true

[node name="ground" type="StaticBody2D" parent="."]
scale = Vector2( 1.3375, 1.125 )
z_index = -1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( -1232.77, -324.166, -1228.29, -278.884, -854.134, -310.848, -594.241, -316.175, -258.172, -316.175, -141.668, -305.521, -139.427, -337.485, -576.317, -342.812, -876.539, -340.148 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( 1738.32, 1600, 1738.32, 622.222, 1813.08, 622.222, 1813.08, 488.889, 1135.25, 479.393, 1125.23, 391.111, 1166.34, 328.761, 1156.46, 208.784, 1085.18, 209.623, 1073.18, 144.181, 1062.6, 142.503, 1053.42, 119.011, 1011.08, 116.494, 996.263, 142.503, 980.032, 141.664, 962.389, 185.292, 905.228, 184.453, 895.348, 197.877, 932.75, 237.31, 889.702, 375.745, 881.94, 456.289, 882.645, 477.264, 528.527, 470.894, 519.545, 428.179, 492.56, 399.702, 503.538, 374.785, 501.542, 247.827, 484.576, 246.64, 487.57, 373.599, 470.604, 393.769, 438.146, 397.172, 292.914, 394.182, 263.017, 385.464, 253.267, 363.818, 259.76, 238.144, 243.057, 240.708, 236.071, 360.547, 255.033, 397.329, 215.113, 438.857, 200.143, 473.267, 20.5007, 469.707, 13.4485, 431.326, -38.7725, 381.94, -263.086, 380.529, -318.867, 411.572, -344.799, 467.69, -1523.43, 456.111, -1525.54, -646.847, -1555.15, -709.701, -1620.71, -770.041, -1706.92, -823.32, -1841.19, -863.23, -1999.24, -868.093, -2003.47, 1600.3 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( -1101.64, 110.802, -1086.21, 92.4584, -1038.74, 81.1702, -845.28, 79.7592, -819.17, 86.8143, -808.488, 106.569, -804.927, 206.751, -783.564, 336.565, -798.993, 371.841, -838.159, 381.718, -1083.84, 378.896, -1100.45, 363.375, -1107.57, 306.934, -1108.76, 124.912 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( -388.615, -53.713, -379.11, 260.83, -588.23, 262.713, -575.556, -57.4799 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( 523.95, -271.441, 516.414, -195.286, 1820.14, -154.968, 1823.91, -249.043 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( 1857.82, -755.251, 1854.05, -674.616, 508.878, -679.096, 508.878, -773.17, 1345.37, -768.69, 1707.1, -732.852 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( 508.878, -1242.28, 508.878, -1134.76, 1797.53, -1130.28, 1827.67, -1224.36 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="ground"]
polygon = PoolVector2Array( -1254.54, -1081.01, -448.191, -1085.49, -440.655, -503.123, -1247, -489.684 )

[node name="SAAM-1979136153_1" type="Sprite" parent="ground"]
position = Vector2( -843.882, -758.652 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 1200, 800 )

[node name="image-2" type="Sprite" parent="ground"]
texture = ExtResource( 8 )

[node name="coffee" type="Sprite" parent="ground"]
position = Vector2( 1029.21, 321.395 )
scale = Vector2( 0.523365, 0.622222 )
texture = ExtResource( 10 )

[node name="Assets" type="Node2D" parent="."]

[node name="Food" type="Node" parent="Assets"]

[node name="Onion" type="RigidBody2D" parent="Assets/Food" groups=[
"bodies",
]]
position = Vector2( 972.531, -400.719 )
mass = 3.0
gravity_scale = 30.0

[node name="onion" type="Sprite" parent="Assets/Food/Onion"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Assets/Food/Onion"]
position = Vector2( 0.733948, 25.2352 )
shape = SubResource( 36 )

[node name="Potatop" type="RigidBody2D" parent="Assets/Food" groups=[
"bodies",
]]
position = Vector2( 2214.11, -921.619 )
mass = 3.0
gravity_scale = 30.0

[node name="potato" type="Sprite" parent="Assets/Food/Potatop"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Food/Potatop"]
polygon = PoolVector2Array( -31.9939, -11.5645, -7.66772, -21.2081, 23.7009, -37.2261, 47.0608, -38.561, 75.7598, -27.2148, 83.9189, 1.03467, 73.2095, 33.1627, 48.011, 48.2817, -13.095, 69.0704, -39.5535, 64.0308, -56.5623, 53.3214, -62.2319, 28.7529, -48.3728, 1.03467 )

[node name="Potatop2" type="RigidBody2D" parent="Assets/Food" groups=[
"bodies",
]]
position = Vector2( 2110.48, -938.506 )
rotation = 2.48884
mass = 3.0
gravity_scale = 30.0

[node name="potato" type="Sprite" parent="Assets/Food/Potatop2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Food/Potatop2"]
polygon = PoolVector2Array( -31.9939, -11.5645, -7.66772, -21.2081, 23.7009, -37.2261, 47.0608, -38.561, 75.7598, -27.2148, 83.9189, 1.03467, 73.2095, 33.1627, 48.011, 48.2817, -13.095, 69.0704, -39.5535, 64.0308, -56.5623, 53.3214, -62.2319, 28.7529, -48.3728, 1.03467 )

[node name="Potatop3" type="RigidBody2D" parent="Assets/Food" groups=[
"bodies",
]]
position = Vector2( 1937.04, -948.957 )
rotation = 0.591667
mass = 3.0
gravity_scale = 30.0

[node name="potato" type="Sprite" parent="Assets/Food/Potatop3"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Food/Potatop3"]
polygon = PoolVector2Array( -31.9939, -11.5645, -7.66772, -21.2081, 23.7009, -37.2261, 47.0608, -38.561, 75.7598, -27.2148, 83.9189, 1.03467, 73.2095, 33.1627, 48.011, 48.2817, -13.095, 69.0704, -39.5535, 64.0308, -56.5623, 53.3214, -62.2319, 28.7529, -48.3728, 1.03467 )

[node name="Onion2" type="RigidBody2D" parent="Assets/Food" groups=[
"bodies",
]]
position = Vector2( 1401.13, -362.622 )
rotation = -1.8675
mass = 3.0
gravity_scale = 30.0

[node name="onion" type="Sprite" parent="Assets/Food/Onion2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Assets/Food/Onion2"]
position = Vector2( 0.733948, 25.2352 )
shape = SubResource( 36 )

[node name="Onion3" type="RigidBody2D" parent="Assets/Food" groups=[
"bodies",
]]
position = Vector2( 1178.76, -385.185 )
mass = 3.0
gravity_scale = 30.0

[node name="onion" type="Sprite" parent="Assets/Food/Onion3"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Assets/Food/Onion3"]
position = Vector2( 0.733948, 25.2352 )
shape = SubResource( 36 )

[node name="Lamp" type="Node2D" parent="Assets"]
position = Vector2( -15.4803, -1056.69 )
script = ExtResource( 3 )

[node name="CanvasModulate" type="CanvasModulate" parent="Assets/Lamp"]
visible = false
position = Vector2( 15.4803, 1056.69 )
color = Color( 0.105882, 0.105882, 0.105882, 1 )

[node name="Lampshade" type="StaticBody2D" parent="Assets/Lamp"]
position = Vector2( 16.9897, 0 )
physics_material_override = SubResource( 37 )

[node name="Sprite" type="Sprite" parent="Assets/Lamp/Lampshade"]
light_mask = -2147483648
texture = ExtResource( 14 )
offset = Vector2( -20, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Lamp/Lampshade"]
position = Vector2( -20, 0 )
polygon = PoolVector2Array( 398.173, 122.546, 394.393, 164.124, 355.336, 181.763, -312.422, 181.763, -351.48, 152.784, -346.44, 113.727, -265.276, 38.6785, -187.69, -11.0054, -67.9976, -63.9221, -54.1385, -126.918, -3.74164, -171.015, 45.3953, -176.055, 81.933, -138.257, 97.0521, -72.7415, 181.467, -39.9836, 279.741, 19.2327, 350.296, 65.8498 )

[node name="Sprite2" type="Sprite" parent="Assets/Lamp/Lampshade"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 3.77539, -671.095 )
scale = Vector2( 0.1, 10 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="Assets/Lamp/Lampshade"]
position = Vector2( -3.9795, 1410 )
scale = Vector2( 2, 1 )
enabled = false
texture = ExtResource( 15 )
texture_scale = 30.09

[node name="Switch" type="Node2D" parent="Assets/Lamp"]
position = Vector2( 344.388, -384.434 )
z_index = -20

[node name="switchbase" type="Sprite" parent="Assets/Lamp/Switch"]
position = Vector2( 2495.81, 1236.5 )
texture = ExtResource( 17 )

[node name="off" type="RigidBody2D" parent="Assets/Lamp/Switch"]
position = Vector2( 2493.6, 1232.88 )
mode = 1

[node name="off" type="Sprite" parent="Assets/Lamp/Switch/off"]
texture = ExtResource( 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Lamp/Switch/off"]
polygon = PoolVector2Array( -11.123, 54.8389, -10.3738, 90.7983, 78.7754, 93.7949, 80.2739, 53.3406 )

[node name="on_area" type="Area2D" parent="Assets/Lamp/Switch/off"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Lamp/Switch/off/on_area"]
position = Vector2( 2.0022, 20.0226 )
polygon = PoolVector2Array( 70.4414, 51.3369, 69.7856, 77.3136, -5.87891, 75.0661, -4.39844, 52.1778 )

[node name="on" type="RigidBody2D" parent="Assets/Lamp/Switch"]
visible = false
mode = 1

[node name="on" type="Sprite" parent="Assets/Lamp/Switch/on"]
position = Vector2( 2493.6, 1234.88 )
texture = ExtResource( 18 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Lamp/Switch/on"]
polygon = PoolVector2Array( 2488.48, 1235.28, 2488.48, 1279.48, 2575.38, 1279.48, 2579.12, 1233.78 )

[node name="off_area" type="Area2D" parent="Assets/Lamp/Switch/on"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Assets/Lamp/Switch/on/off_area"]
position = Vector2( 4.00464, -22.6923 )
polygon = PoolVector2Array( 2495.23, 1254.54, 2494.56, 1283.91, 2565.31, 1283.24, 2564.64, 1251.2 )

[node name="Level_Logic" type="Node" parent="."]
script = ExtResource( 5 )

[node name="pot" type="Area2D" parent="Level_Logic"]
position = Vector2( 494.661, 358.425 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level_Logic/pot"]
shape = SubResource( 38 )

[node name="Timer" type="Timer" parent="Level_Logic"]
wait_time = 2.5
[connection signal="body_entered" from="Assets/Lamp/Switch/off/on_area" to="Assets/Lamp" method="_on_on_area_body_entered"]
[connection signal="body_entered" from="Assets/Lamp/Switch/on/off_area" to="Assets/Lamp" method="_on_off_area_body_entered"]
[connection signal="body_entered" from="Level_Logic/pot" to="Level_Logic" method="_on_pot_body_entered"]
[connection signal="body_exited" from="Level_Logic/pot" to="Level_Logic" method="_on_pot_body_exited"]
[connection signal="timeout" from="Level_Logic/Timer" to="Level_Logic" method="_on_Timer_timeout"]
